# datastar-haskell

./: .gitignore  CHANGELOG.md  README.md  cabal.project  sdk.md  skdTest  sse.cabal  vars.txt  xServerSentEventGenerator.hs
app/: Main.hs  SnapMain.hs  WarpMain.hs
demo/: Main.hs  SnapDemo.hs
demo/www/: datastar-core.js  datastar.js  index.html
src/: Constants.hs  Datastar.hs  GenerateNewtypes.hs  Makefile  Newtypes.hs  SSE.hs  ServerSentEventGenerator.hs  dtest
src/Extra/: Main.hs  S.hs  Threading.hs  sse-snap.cabal
src/Extra/www/: index.html
src/Sender/: Snap.hs
src/ServerSentEventGenerator/: Class.hs  Constants.hs  Internal.hs  Makefile  Newtypes.hs  Types.hs
src/ServerSentEventGenerator/Extra/: ByteString  Main.hs  S.hs  cabal.project  index.html  sse-snap.cabal
src/ServerSentEventGenerator/Extra/www/: index.html
src/ServerSentEventGenerator/Server/: Snap.hs
src/code_snippets/getting_started/: multiple_events.haskellsnippet  setup.haskellsnippet
src/code_snippets/going_deeper/: multiple_events.haskellsnippet
src/code_snippets/how_tos/: polling_1.haskellsnippet  polling_2.haskellsnippet  redirect_1.haskellsnippet  redirect_2.haskellsnippet  redirect_3.haskellsnippet
src/demo/: Main.hs  SnapDemo.hs  SnapSSE.hs
src/demo/www/: datastar.js.map  index.html
src/examples/hello-world/: Main.hs  hello-world.html
src/test/: Main.hs
test/: Main.hs
www/: datastar-core.js.map
