cabal-version:      3.0
name:               sse
version:            0.2.0.0
synopsis:           Interface for Server Sent Events using the DataStar framework
description:        See https://data-star.dev/ for full information
                    about the wonderful new (2024) backend framework,
                    almost totally powered by the frontend.
license:            NONE
author:             Henry Laxen
maintainer:         nadine.and.henry@pobox.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
documentation:      True                    

common warnings
  ghc-options:
    -O0
    -Wall
    -ddump-minimal-imports
    -funbox-strict-fields
    -fwarn-tabs
    -fwrite-ide-info
    -haddock
    -threaded

common deps
  build-depends:
        base
      , bytestring
      , data-default
      , text
      , utf8-string
--       , html-entities
--       , io-streams
--       , neat-interpolation
--       , relude
--       , silently
--       , snap
--       , snap-core
--       , time

common default-extensions
  default-extensions:
        OverloadedStrings
      , FlexibleInstances
      , QuasiQuotes
      , TemplateHaskell
      , TypeSynonymInstances

library
    import:           deps,warnings,default-extensions
    exposed-modules:  ServerSentEventGenerator
    other-modules:
       Constants
       ServerSentEventGenerator.Internal
--       , Sender.Snap
    hs-source-dirs:   src
    default-language: Haskell2010

-- Executable datastar
--   import:  deps,warnings,default-extensions
--   default-language: Haskell2010
--   build-depends:
--       datastar
--     , filepath
--     , http-types
--     , wai
--     , wai-app-static
--     , warp
--   other-modules: SnapMain, WarpMain, Constants
--   hs-source-dirs: app
--   main-is: Main.hs

-- test-suite ServerSentEventGenerator-test
--     import:           deps,warnings,default-extensions
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          Main.hs
--     build-depends:
--         base ^>=4.19.1.0
--       , datastar
-- cabal v2-update 'hackage.haskell.org,2024-11-27T03:59:09Z'
