cabal-version:      3.0
name:               sse
version:            0.2.0.0
synopsis:           Interface for Server Sent Events using the DataStar framework
description:        See https://data-star.dev/ for full information
                    about the wonderful new (2024) backend framework,
                    almost totally powered by the frontend.
license:            NONE
author:             Henry Laxen
maintainer:         nadine.and.henry@pobox.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
documentation:      True                    

common warnings
  ghc-options:
    -O0
    -Wall
    -ddump-minimal-imports
    -funbox-strict-fields
    -fwarn-tabs
    -fwrite-ide-info
    -haddock
    -threaded

common deps
  build-depends:
        base
      , bytestring
      , data-default
      , extra
      , neat-interpolation
      , text
      , utf8-string
      , template-haskell

common default-extensions
  default-extensions:
        OverloadedStrings
      , FlexibleInstances
      , QuasiQuotes
      , TemplateHaskell
      , TypeSynonymInstances
      , GeneralizedNewtypeDeriving

library
    import:           deps,warnings,default-extensions
    exposed-modules:
        ServerSentEventGenerator
      , ServerSentEventGenerator.Constants
    other-modules:
        ServerSentEventGenerator.Internal
      , ServerSentEventGenerator.Newtypes
      , ServerSentEventGenerator.Class
      , GenerateNewtypes
   hs-source-dirs:   src
    default-language: Haskell2010

