cabal-version:      3.12
name:               sse
version:            1.0.0.0
synopsis:           Interface for Server Sent Events using the DataStar framework
description:        See https://data-star.dev/ for full information
                    about the wonderful new (2024) backend framework,
                    almost totally powered by the frontend.
license:            NONE
author:             Henry Laxen
maintainer:         nadine.and.henry@pobox.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
documentation:      False

common warnings
  ghc-options:
    -O0
    -Wall
    -ddump-minimal-imports
    -funbox-strict-fields
    -fwarn-tabs
    -fwrite-ide-info
    -haddock
    -threaded

common deps
  build-depends:
        base
      , bytestring
      , data-default
      , io-streams
      , neat-interpolation
      , template-haskell
      , text
      , utf8-string

common default-extensions
  default-extensions:
        OverloadedStrings
      , FlexibleInstances
      , QuasiQuotes
      , TemplateHaskell
      , TypeSynonymInstances
      , GeneralizedNewtypeDeriving
      , ScopedTypeVariables

library
    import:           deps,warnings,default-extensions
    exposed-modules:
        ServerSentEventGenerator
      , ServerSentEventGenerator.Class
      , ServerSentEventGenerator.Constants
      , ServerSentEventGenerator.Types
    other-modules:
        ServerSentEventGenerator.Internal
    hs-source-dirs:   src
    default-language: Haskell2010


Executable datastar-demo
  import:  deps,warnings,default-extensions
  default-language: Haskell2010
  build-depends:
    , snap
    , snap-core
    , html-entities
    , time
  other-modules:
        ServerSentEventGenerator
      , ServerSentEventGenerator.Class
      , ServerSentEventGenerator.Constants
      , ServerSentEventGenerator.Types
      , ServerSentEventGenerator.Internal
      , SnapDemo
  hs-source-dirs: src,demo
  main-is: Main.hs
    
