cabal-version:      3.12
name:               sse-snap
version:            1.0.0.0
synopsis:           Interface for ServerSentEventGenerator and the
                    Snap web framework
description:        See https://data-star.dev/ for full information
                    about the wonderful new (2024) backend framework,
                    almost totally powered by the frontend.
license:            NONE
author:             Henry Laxen
maintainer:         nadine.and.henry@pobox.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
documentation:      True

common warnings
  ghc-options:
    -O0
    -Wall
    -ddump-minimal-imports
    -funbox-strict-fields
    -fwarn-tabs
    -fwrite-ide-info
    -haddock
    -threaded

common deps
  build-depends:
      base
    , io-streams
    , snap
    , snap-core
    , bytestring
    , html-entities
    , neat-interpolation
    , text
    , time
    , utf8-string
--       , data-default
--       , extra
--       , neat-interpolation
--       , text
--       , utf8-string
--       , template-haskell

common default-extensions
  default-extensions:
        OverloadedStrings
      , FlexibleInstances
      , QuasiQuotes
      , TemplateHaskell
      , TypeSynonymInstances
      , GeneralizedNewtypeDeriving
      , ScopedTypeVariables

library
    import:           deps,warnings,default-extensions
    exposed-modules:  S
    other-modules:
    hs-source-dirs:   .
    default-language: Haskell2010

Executable             s
  import:              deps,warnings,default-extensions
  default-language:    Haskell2010
  hs-source-dirs:      .
  main-is:             Main.hs
  other-modules:       S

 
